# tradebot

./: .env.example  .gitignore  Cargo.toml  README.md  TODO.md
doc/: binance.md  market_buy_flow.json  market_sell_flow.json
src/: algo.rs  binance.rs  lib.rs  main.rs  order.rs  portfolio.rs  server.rs  state.rs  ticker.rs  utils.rs
src/marketplace/: binance.rs  mod.rs
src/marketplace/binance/: account.rs  account_api.rs  account_stream.rs  candles.rs  data_api.rs  data_stream.rs  exchange_info_api.rs  market_data_api.rs  market_data_stream.rs  mod.rs  settings_api.rs  stream.rs  trade_api.rs  utils.rs
src/marketplace/replay/: data_stream.rs  mod.rs
src/marketplace/simulation/: account_api.rs  account_stream.rs  matching.rs  mod.rs  trade_api.rs
src/portfolio/: mod.rs
src/state/: mod.rs
src/strategy/: buy_and_hold.rs  mod.rs  scalping.rs
src/tui/: app.rs
