[package]
name = "trading-bot"
version = "0.1.0"
edition = "2021"
default-run = "bot"

[[bin]]
name = "bot"
path = "src/bin/main.rs"

[[bin]]
name = "tui"
path = "src/bin/tui.rs"

[dependencies]
anyhow = "1.0.96"
axum = { version = "0.8.4", features = ["ws"] }
chrono = "0.4.40"
clap = { version = "4.5.38", features = ["derive", "env"] }
colored = "3.0.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio-stream = "0.1.17"
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink"] }
hex = "0.4.3"
hmac = "0.12.1"
rand = "0.9.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
reqwest = { version = "0.12.12", features = ["json"] }
rust_decimal = { version = "1.36.0", features = ["serde", "serde-with-str"] }
rust_decimal_macros = "1.36.0"
serde = { version = "1.0.218", features = ["serde_derive"] }
serde_json = "1.0.139"
sha2 = "0.10.9"
tokio = { version = "1.43.0", features = ["fs", "full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tungstenite = "0.26.2"
yata = "0.7.0"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
